--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,18 +1,25 @@
+*{box-sizing: border-box}
+html{
+    height: 100%;
+}
 body{
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 .wrapper{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+   height: 100%;
 }
 
 .layoutContainer{
     width: 100%;
+    height: calc(100vh-80px);
     display: flex;
     flex-wrap: wrap;
 }
@@ -29,8 +36,7 @@ body{
 .menuContainer {
     display: flex;
     flex: 1 0 30%;
-    height: 1px;
-    min-height: 100vh;
+    min-height: 100%;
     position: relative;
     overflow-y: auto;
     max-width: 280px;
@@ -48,7 +54,9 @@ body{
 
 .boardContainer{
     display: flex;
+    position: relative;
     flex-direction: column;
     width: 100%;
+    margin: 10px;
     align-items: center;
 }
