Delete SRR. Change webpack.config.js. Make upload image form. Add dexie for indexedDB. Add picturesData reducer to redux store. Add styles for MenuPanel

--- a/src/components/menu/MenuPanel.css
+++ b/src/components/menu/MenuPanel.css
@@ -5,15 +5,12 @@
     flex-direction: column;
     border-right: 1px solid #E0E0E0;
     position: relative;
-
 }
 
-.buttonAddLink {
+.btnAddLink {
     background-color: #FF3333;
     max-width: 160px;
     border: none;
     padding: 10px;
     margin: 10px;
-}
-.buttonAddLink:focus {
 }
