--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,49 +1,58 @@
-*{box-sizing: border-box}
-html{
+* {
+    box-sizing: border-box
+}
+
+html {
     height: 100%;
 }
-body{
-    font-family: 'Roboto', sans-serif;
+
+body {
+    font-family: 'Lato', sans-serif;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     height: 100%;
 }
 
-.wrapper{
+button{
+    font-family: 'Roboto', sans-serif;
+    appearance: none;
+    background: transparent;
+    border: 0;
+}
+
+.wrapper {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-   height: 100%;
+    height: 100%;
 }
 
-.layoutContainer{
+.layoutContainer {
     width: 100%;
-    height: calc(100vh-80px);
+    height: calc(100vh - 80px);
     display: flex;
     flex-wrap: wrap;
 }
 
-
-.contentContainer{
+.contentContainer {
     width: 100%;
     flex: 2 1;
     display: flex;
     justify-content: center;
-
 }
 
 .menuContainer {
     display: flex;
     flex: 1 0 30%;
-    min-height: 100%;
+    height: 100%;
     position: relative;
     overflow-y: auto;
-    max-width: 280px;
+    max-width: 320px;
 
 }
 
-.headerContainer{
+.headerContainer {
     display: flex;
     width: 100%;
     height: 80px;
@@ -52,11 +61,19 @@ body{
     border-bottom: 1px solid #E0E0E0;
 }
 
-.boardContainer{
+.boardContainer {
     display: flex;
     position: relative;
     flex-direction: column;
     width: 100%;
     margin: 10px;
     align-items: center;
+}
+
+
+
+.picturesContainer {
+    display: flex;
+    flex-wrap: wrap;
+    width: 700px;
 }
