--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -19,6 +19,10 @@
 .headerButtons{
     flex: 1;
     padding: 20px 40px;
-    /*height: 100%;*/
     position: relative;
+}
+
+.headerContainer a {
+    text-decoration: none;
+    color: red;
 }
