--- a/src/components/board/Board.css
+++ b/src/components/board/Board.css
@@ -1,15 +1,16 @@
-.containerBoard {
+.board {
     display: flex;
     background: #FF3333;
     background: url("../../images/boardBackgroundWeb.jpg")  no-repeat;
     background-size: cover;
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
     max-width: 1080px;
+    margin:10px;
     flex-wrap: wrap;
     position: relative;
     box-shadow: 0 2px 4px 0 rgba(34, 36, 38, .12), 0 2px 10px 0 rgba(34, 36, 38, .15);
-    z-index:-2;
+    /*z-index:-2;*/
     border-radius: 2px;
 }
 
@@ -20,3 +21,4 @@
     padding: 20px;
     position: relative;
 }
+
