--- a/src/components/board/lineRenderer/lineRenderer.css
+++ b/src/components/board/lineRenderer/lineRenderer.css
@@ -1,10 +1,13 @@
+
 .pathContainer {
     width: 100%;
     position: absolute;
     pointer-events: none;
-    height: 100vh;
+    /*height: 100vh;*/
+    height: 100%;
     top: 0;
     left: 0;
+    z-index: 200;
 }
 
 svg {
@@ -12,6 +15,41 @@ svg {
     width: 100%;
     height: 100%;
     position: absolute;
+}
+
+.linesContainer {
+    display: flex;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    margin: 10px;
+    /*border:6px solid red;*/
+}
+
+.pin:after {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: rgb(180, 8, 0);
+    background-image: radial-gradient(
+            at 60% 30%,
+            #f99,
+            red 20%,
+            rgb(180, 8, 0)
+    );
+    background-position: 20% 10%;
+    cursor: pointer;
+    position: absolute;
+    top: -20px;
+    left: 90px;
+    pointer-events: none;
+    transform: scale(.8);
+    box-shadow: -5px 10px 3px -8.5px #000, -1px 7px 12px -5px #000;
+    transition: all .3s ease;
 }
 
 :global {
@@ -35,4 +73,5 @@ body {
     border-radius: 50%;
     background: #fff;
 }
+
 }
