--- a/src/components/content_templates/PhotoCard.css
+++ b/src/components/content_templates/PhotoCard.css
@@ -1,24 +1,26 @@
 .polaroid {
-    margin: 50px;
-    height: 324px;
-    width: 264px;
-    background-color: #F5F5F5;
-    border-radius: 2px;
-    position: absolute;
-}
-
-.photoWrap{
+    background: #eee;
     width: 100%;
-    height: 80%;
-    display: block;
-    padding: 12px;
+    padding: 5% 5% 30%;
+    position: relative;
 }
 
+.outer {
+    position: relative;
+    width: 100%;
+    padding-top: 98%; /* defines aspect ratio */
+}
 
-.photo{
+.inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    pointer-events: none;
 }
 
 .polaroid::before,
@@ -28,7 +30,7 @@
     bottom: 10px;
     width: 40%;
     height: 10px;
-    box-shadow: 0 9px 14px rgba(0,0,0,.9);
+    box-shadow: 0 5px 14px rgba(0,0,0,.99);
     z-index: -1;
     transition: all .3s ease-in-out;
 }
@@ -43,15 +45,11 @@
     transform: skew(5deg) rotate(5deg);
 }
 
-/*.polaroid:hover::before,*/
-/*.polaroid:hover::after {*/
-/*    box-shadow: 0 2px 14px rgba(0,0,0,.4);*/
-/*}*/
 
-/*.polaroid:hover::before {*/
-/*    left: 5px;*/
-/*}*/
 
-/*.polaroid:hover::after {*/
-/*    right: 5px;*/
-/*}*/
+
+
+
+
+
+
