--- a/src/components/menu/MenuPanel.css
+++ b/src/components/menu/MenuPanel.css
@@ -14,3 +14,28 @@
     padding: 10px;
     margin: 10px;
 }
+
+.templates {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    align-items: flex-start;
+}
+
+/*.templateItem {*/
+/*    position: relative;*/
+/*    padding-bottom: 48%;*/
+/*    margin: 1%;*/
+/*    flex: 0 0 48%;*/
+/*    max-width: 48%;*/
+/*    overflow: hidden;*/
+/*}*/
+
+.templateItem {
+    width: 100px;
+    font-size: 14px;
+    flex: 1 1 auto;
+    padding: 5px;
+}
