--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,82 +1,3 @@
-/** {*/
-/*    box-sizing: border-box*/
-/*}*/
-
-/*html {*/
-/*    height: 100%;*/
-/*}*/
-
-/*body {*/
-/*    font-family: 'Lato', sans-serif;*/
-/*    box-sizing: border-box;*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    height: 100%;*/
-/*}*/
-
-/*button{*/
-/*    font-family: 'Roboto', sans-serif;*/
-/*    appearance: none;*/
-/*    background: transparent;*/
-/*    border: 0;*/
-/*}*/
-
-/*.wrapper {*/
-/*    width: 100%;*/
-/*    display: flex;*/
-/*    flex-wrap: wrap;*/
-/*    height: 100%;*/
-/*}*/
-
-/*.layoutContainer {*/
-/*    width: 100%;*/
-/*    height: calc(100vh - 80px);*/
-/*    display: flex;*/
-/*    flex-wrap: wrap;*/
-/*}*/
-
-/*.contentContainer {*/
-/*    width: 100%;*/
-/*    flex: 2 1;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*}*/
-
-/*.menuContainer {*/
-/*    display: flex;*/
-/*    flex: 1 0 30%;*/
-/*    height: 100%;*/
-/*    position: relative;*/
-/*    overflow-y: auto;*/
-/*    max-width: 320px;*/
-
-/*}*/
-
-/*.headerContainer {*/
-/*    display: flex;*/
-/*    width: 100%;*/
-/*    height: 80px;*/
-/*    justify-content: space-between;*/
-/*    align-items: center;*/
-/*    border-bottom: 1px solid #E0E0E0;*/
-/*}*/
-
-/*.boardContainer {*/
-/*    display: flex;*/
-/*    position: relative;*/
-/*    flex-direction: column;*/
-/*    width: 100%;*/
-/*    margin: 10px;*/
-/*    align-items: center;*/
-/*}*/
-
-
-
-/*.picturesContainer {*/
-/*    display: flex;*/
-/*    flex-wrap: wrap;*/
-/*    width: 700px;*/
-/*}*/
 * {
     box-sizing: border-box
 }
@@ -86,15 +7,17 @@ html {
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    font-weight: 500;
     margin: 0;
     padding: 0;
     height: 100%;
 }
 
-button{
+button {
     font-family: 'Roboto', sans-serif;
+    font-size: 16px;
     appearance: none;
     background: transparent;
     border: 0;
@@ -117,13 +40,8 @@ button{
 .contentContainer {
     width: 100%;
     flex: 2 1;
-    /*display: flex;*/
-    /*justify-content: center;*/
-    /*border:3px solid deepskyblue;*/
     position: relative;
-    max-width: 1080px;
     margin: 0 auto;
-
 }
 
 .menuContainer {
@@ -147,18 +65,55 @@ button{
 
 .boardContainer {
     display: flex;
-    /*position: absolute;*/
+    position: relative;
     top: 0;
-    width: 100%;
-    height: 100%;
+    height: calc(100% - 50px);
     justify-content: center;
-    /*border:6px solid green;*/
+    background-color: #EDF0F2;
 }
 
-
+.boardFrame {
+    width: 100%;
+    max-width: 1080px;
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    height: calc(100% - 20px);
+    position: relative;
+    background-color: #5b6467;
+    background-image: linear-gradient(315deg, #5b6467 0%, #8b939a 74%);
+    /*background: linear-gradient(#f6b73c, #4d9f0c);*/
+    box-shadow: 0 2px 4px 0 rgb(34 36 38 / 12%), 0 2px 10px 0 rgb(34 36 38 / 15%);
+    border-radius: 5px;
+    padding: 8px;
+}
 
 .picturesContainer {
     display: flex;
     flex-wrap: wrap;
     width: 700px;
+}
+
+
+.boardBackground {
+    display: flex;
+    background: #FF3333;
+    background: url("../images/boardBackgroundWeb.jpg")  no-repeat;
+    background-size: cover;
+    width: 100%;
+    max-width: 1080px;
+    flex-wrap: wrap;
+    position: relative;
+    /*box-shadow: 0 2px 4px 0 rgba(34, 36, 38, .12), 0 2px 10px 0 rgba(34, 36, 38, .15);*/
+    /*z-index:-2;*/
+    border: 2px solid #5b6467;
+    border-radius: 2px;
+}
+
+.canvas {
+    display: flex;
+    width: 100%;
+    height: 612px;
+    padding: 20px;
+    position: relative;
 }
