--- a/src/components/board/Board.css
+++ b/src/components/board/Board.css
@@ -4,13 +4,12 @@
     background: url("../../images/boardBackgroundWeb.jpg")  no-repeat;
     background-size: cover;
     width: 100%;
-    /*height: 100%;*/
     max-width: 1080px;
-    margin:10px;
     flex-wrap: wrap;
     position: relative;
-    box-shadow: 0 2px 4px 0 rgba(34, 36, 38, .12), 0 2px 10px 0 rgba(34, 36, 38, .15);
+    /*box-shadow: 0 2px 4px 0 rgba(34, 36, 38, .12), 0 2px 10px 0 rgba(34, 36, 38, .15);*/
     /*z-index:-2;*/
+    border: 2px solid #5b6467;
     border-radius: 2px;
 }
 
