--- a/src/components/board/lineRenderer/lineRenderer.css
+++ b/src/components/board/lineRenderer/lineRenderer.css
@@ -1,4 +1,6 @@
-
+*{
+    box-sizing: border-box;
+}
 .pathContainer {
     width: 100%;
     position: absolute;
@@ -20,16 +22,15 @@ svg {
 .linesContainer {
     display: flex;
     position: absolute;
-    top: 0;
+    top:0;
     width: 100%;
+    max-width: 1080px;
+    /*height: calc(100% - 20px);*/
     height: 100%;
-    justify-content: center;
-    margin: 10px;
-    /*border:6px solid red;*/
+    /*justify-content: center;*/
 }
 
-.pin:after {
-    content: '';
+.pin {
     display: block;
     width: 20px;
     height: 20px;
@@ -44,12 +45,14 @@ svg {
     background-position: 20% 10%;
     cursor: pointer;
     position: absolute;
-    top: -20px;
-    left: 90px;
+    /*top: -20px;*/
+    /*left: 90px;*/
     pointer-events: none;
     transform: scale(.8);
     box-shadow: -5px 10px 3px -8.5px #000, -1px 7px 12px -5px #000;
     transition: all .3s ease;
+    z-index: 300;
+    list-style: none;
 }
 
 :global {
