--- a/src/components/content_templates/PhotoCard.css
+++ b/src/components/content_templates/PhotoCard.css
@@ -9,6 +9,7 @@
     position: relative;
     width: 100%;
     padding-top: 98%; /* defines aspect ratio */
+    user-select: none;
 }
 
 .inner {
@@ -20,7 +21,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    pointer-events: none;
+    user-select: none;
 }
 
 .polaroid::before,
