Create editPanelReducer.js. Move state isEditing and pinMode to editPanelReducer.js

--- a/src/components/board/lineRenderer/lineRenderer.css
+++ b/src/components/board/lineRenderer/lineRenderer.css
@@ -55,6 +55,13 @@ svg {
     list-style: none;
 }
 
+.linesContainer ul{
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+
 :global {
 
 body {
