--- a/src/components/board/lineRenderer/lineRenderer.css
+++ b/src/components/board/lineRenderer/lineRenderer.css
@@ -4,19 +4,18 @@
 .pathContainer {
     width: 100%;
     position: absolute;
-    pointer-events: none;
-    /*height: 100vh;*/
     height: 100%;
     top: 0;
     left: 0;
     z-index: 200;
 }
 
-svg {
+.pathContainer svg {
     overflow: hidden;
     width: 100%;
     height: 100%;
     position: absolute;
+    pointer-events: none;
 }
 
 .linesContainer {
@@ -47,7 +46,6 @@ svg {
     position: absolute;
     /*top: -20px;*/
     /*left: 90px;*/
-    pointer-events: none;
     transform: scale(.8);
     box-shadow: -5px 10px 3px -8.5px #000, -1px 7px 12px -5px #000;
     transition: all .3s ease;
@@ -70,11 +68,18 @@ body {
 
 .link {
     position: absolute;
-    fill: none;
+    /*fill: #f33;*/
     stroke: #f33;
     stroke-opacity: 0.6;
-    stroke-width: 2px;
+    stroke-width: 10px;
+    /*cursor: pointer;*/
+    pointer-events: auto;
+    cursor: pointer;
 }
+
+/*.link:hover{*/
+/*    stroke: greenyellow;*/
+/*}*/
 
 .some {
     position: absolute;
