--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,7 +14,8 @@
     position: relative;
     padding: 20px 40px;
     font-family: 'Lato', sans-serif;
-    color:#004276;
+    color:#FAFAFA;
+
 }
 
 .headerButtons {
