--- a/src/components/EditPanel/EditPanel.css
+++ b/src/components/EditPanel/EditPanel.css
@@ -4,18 +4,34 @@
 .panel{
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid #4F5152;
+    border-left: 1px solid #4F5152;
     width: 100%;
     height: 50px;
     padding: 8px;
+    background-color: #3C3F41;
 }
 
-.panelButton{
-    color:#000000;
-    cursor: pointer;
-    padding:0 10px ;
-    margin-right: 10px;
 
+
+.panelButton{
+    color:#EDF0F2;
+    cursor: pointer;
+    padding:8px 10px ;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+
+/*.panelButton:hover{*/
+/*    background-color: #007CBA;*/
+/*}*/
+
+.panelButton:hover{
+    background-color: rgba(250, 250, 250, 0.07);;
+}
+
+.panelButton:active{
+    background-color: rgba(250, 250, 250, 0.15);;
 }
 
 .pushRight {
