--- a/src/components/App.css
+++ b/src/components/App.css
@@ -99,8 +99,7 @@ button {
     position: relative;
     background-color: #5b6467;
     background-image: linear-gradient(315deg, #5b6467 0%, #8b939a 74%);
-    /*background: linear-gradient(#f6b73c, #4d9f0c);*/
-    box-shadow: 0 2px 4px 0 rgba(34, 36, 38,  0.12), 0 2px 10px 0 rgba(34, 36, 38, 0.15);
+    box-shadow: 0 2px 4px 0 rgba(34, 36, 38, 0.12), 0 2px 10px 0 rgba(34, 36, 38, 0.15);
     border-radius: 5px;
     padding: 8px;
 }
@@ -132,4 +131,28 @@ button {
     height: 612px;
     padding: 20px;
     position: relative;
+}
+
+.filtered {
+    border-radius: 8px;
+    background-image: radial-gradient(ellipse, #0000, rgba(0, 0, 0, .3)),
+    linear-gradient(0deg, rgba(153, 119, 34, .25), rgba(153, 119, 34, .25)),
+    url('../images/noisy-texture-original.png');
+    background-size: auto, auto, auto, cover;
+    background-repeat: repeat;
+    background-position: center;
+    box-shadow: 0 5px 14px rgba(0, 0, 0, 0.99);
+    isolation:isolate;
+}
+
+.filtered img {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    object-fit: cover;
+    display: block;
+    z-index: -1;
+    position: relative;
+    filter: blur(.5px) saturate(0.7) brightness(1.2);
+    mix-blend-mode: soft-light;
 }
