--- a/src/components/menu/MenuPanel.css
+++ b/src/components/menu/MenuPanel.css
@@ -16,7 +16,8 @@
 
 .templates {
     width: 100%;
-    padding: 20px;
+    padding: 0;
+    margin: 0;
     display: flex;
     flex-wrap: wrap;
     list-style: none;
@@ -28,4 +29,14 @@
     font-size: 14px;
     flex: 1 1 auto;
     padding: 5px;
+}
+
+.templatesContainer {
+    padding: 20px;
+}
+
+.templatesContainer span {
+    display: inline-block;
+    font-size: 18px;
+    padding: 10px 0;
 }
