--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,6 +4,7 @@
 
 html {
     height: 100%;
+    font-size: 14px;
 }
 
 body {
@@ -57,17 +58,17 @@ button {
 }
 
 .menuContainer::-webkit-scrollbar {
-    width: 15px; /* width of the entire scrollbar */
+    width: 15px;
 }
 
 .menuContainer::-webkit-scrollbar-track {
-    background: #3C3F41;; /* color of the tracking area */
+    background: #3C3F41;;
 }
 
 .menuContainer::-webkit-scrollbar-thumb {
-    background-color: #7F8388; /* color of the scroll thumb */
-    border-radius: 15px; /* roundness of the scroll thumb */
-    border: 5px solid #3C3F41; /* creates padding around scroll thumb */
+    background-color: #7F8388;
+    border-radius: 15px;
+    border: 5px solid #3C3F41;
 }
 
 .headerContainer {
@@ -119,8 +120,6 @@ button {
     max-width: 1080px;
     flex-wrap: wrap;
     position: relative;
-    /*box-shadow: 0 2px 4px 0 rgba(34, 36, 38, .12), 0 2px 10px 0 rgba(34, 36, 38, .15);*/
-    /*z-index:-2;*/
     border: 2px solid #5b6467;
     border-radius: 2px;
 }
