--- a/src/components/content_templates/Note.css
+++ b/src/components/content_templates/Note.css
@@ -8,16 +8,19 @@
     padding-bottom: 97.5%;
     background-image: linear-gradient(
             160deg,
-            rgb(255, 222, 30) 50%,
-            rgb(255, 250, 80)
+            rgba(0, 0, 0, 0),
+            rgba(66, 66, 66, 0.05)
+    ), linear-gradient(
+            160deg,
+            rgba(235, 238, 145, 1),
+            rgba(208, 212, 94, 1)
     );
     box-shadow: -2px 6px 6px rgba(0, 0, 0, .4);
     text-align: center;
-    font-family: 'marker felt', 'comic sans ms', sans-serif;
     font-size: 100%;
     line-height: 1.3;
-    border-radius: 2px;
-    color:#555555
+    border-radius: 1%;
+    color: #555555
 }
 
 .outer {
@@ -35,3 +38,15 @@
     user-select: none;
 }
 
+.filtered {
+    filter: saturate(0.9);
+}
+
+.note textarea{
+    font-family: 'marker felt', 'comic sans ms', sans-serif;
+    height: 70px;
+    max-height: 100px;
+    text-align: center;
+    font-size: 100%;
+    cursor: grab;
+}
