--- a/src/components/menu/MenuPanel.css
+++ b/src/components/menu/MenuPanel.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    cursor: default;
 }
 
 .btnAddLink {
@@ -29,13 +30,15 @@
     font-size: 14px;
     flex: 1 1 auto;
     padding: 5px;
+    max-height: 190px;
+    cursor: grab;
 }
 
 .templatesContainer {
     padding: 20px;
 }
 
-.templatesContainer span {
+.templatesContainer > span {
     display: inline-block;
     font-size: 18px;
     padding: 10px 0;
