--- a/src/components/content_templates/Note.css
+++ b/src/components/content_templates/Note.css
@@ -30,6 +30,7 @@
 
 .inner {
     position: absolute;
+    font-family: 'marker felt', 'comic sans ms', sans-serif;
     top: 0;
     left: 0;
     right: 0;
