--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -28,3 +28,20 @@
     text-decoration: none;
     color:#004276;
 }
+
+.saveButton{
+    color:#2d3031;
+    cursor: pointer;
+    padding:8px 10px ;
+    margin-right: 10px;
+    border-radius: 5px;
+    background:rgba(237, 240, 242,0.8);
+}
+
+.saveButton:hover{
+    background-color: rgba(237, 240, 242,0.9);
+}
+
+.saveButton:active{
+    background-color: rgba(237, 240, 242,1);
+}
