--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,7 +14,7 @@
     position: relative;
     padding: 20px 40px;
     font-family: 'Lato', sans-serif;
-    color:#FAFAFA;
+    color: #FAFAFA;
 
 }
 
@@ -26,22 +26,29 @@
 
 .headerContainer a {
     text-decoration: none;
-    color:#004276;
+    color: #004276;
 }
 
-.saveButton{
-    color:#2d3031;
+.saveButton {
+    color: #2d3031;
     cursor: pointer;
-    padding:8px 10px ;
+    padding: 8px 10px;
     margin-right: 10px;
     border-radius: 5px;
-    background:rgba(237, 240, 242,0.8);
+    background: rgba(237, 240, 242, 0.8);
 }
 
-.saveButton:hover{
-    background-color: rgba(237, 240, 242,0.9);
+.clearButton {
+    background: rgba(255, 51, 51, 0.8)
 }
 
-.saveButton:active{
-    background-color: rgba(237, 240, 242,1);
+.saveButton:hover {
+    background-color: rgba(237, 240, 242, 0.9);
+}
+
+.saveButton:active {
+    background-color: rgba(237, 240, 242, 1);
+}
+.clearButton:hover{
+    background-color:  rgba(255, 51, 51, 1)
 }
